[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://addons/dialogic/Events/Variable/variables_editor/variable_group.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7k4ja"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.466667, 0.466667, 0.466667, 0.137255)
border_width_left = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Image" id="Image_t2vcq"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="6"]
image = SubResource("Image_t2vcq")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rhdj5"]

[sub_resource type="Image" id="Image_wxcgx"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="9"]
image = SubResource("Image_wxcgx")

[node name="VariableGroup" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7k4ja")
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
offset_left = 5.0
offset_top = 5.0
offset_right = 1019.0
offset_bottom = 595.0

[node name="MainBar" type="HBoxContainer" parent="VBox"]
offset_right = 1014.0
offset_bottom = 31.0

[node name="Dragger" type="TextureRect" parent="VBox/MainBar"]
unique_name_in_owner = true
offset_right = 16.0
offset_bottom = 31.0
mouse_default_cursor_shape = 13
texture = SubResource("6")

[node name="NameEdit" type="LineEdit" parent="VBox/MainBar"]
unique_name_in_owner = true
offset_left = 20.0
offset_right = 874.0
offset_bottom = 31.0
size_flags_horizontal = 3
theme_override_styles/read_only = SubResource("StyleBoxEmpty_rhdj5")
text = "NewFolder"
editable = false

[node name="SearchBar" type="LineEdit" parent="VBox/MainBar"]
unique_name_in_owner = true
visible = false
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
placeholder_text = "search"

[node name="NewVariable" type="Button" parent="VBox/MainBar"]
unique_name_in_owner = true
offset_left = 878.0
offset_right = 902.0
offset_bottom = 31.0
hint_tooltip = "Add new variable"
icon = SubResource("9")
flat = true

[node name="NewGroup" type="Button" parent="VBox/MainBar"]
unique_name_in_owner = true
offset_left = 906.0
offset_right = 930.0
offset_bottom = 31.0
hint_tooltip = "Add new folder"
icon = SubResource("9")
flat = true

[node name="DuplicateButton" type="Button" parent="VBox/MainBar"]
unique_name_in_owner = true
offset_left = 934.0
offset_right = 958.0
offset_bottom = 31.0
hint_tooltip = "Duplicate Group"
icon = SubResource("6")
flat = true

[node name="DeleteButton" type="Button" parent="VBox/MainBar"]
unique_name_in_owner = true
offset_left = 962.0
offset_right = 986.0
offset_bottom = 31.0
hint_tooltip = "Delete Group"
icon = SubResource("6")
flat = true

[node name="FoldButton" type="Button" parent="VBox/MainBar"]
unique_name_in_owner = true
offset_left = 990.0
offset_right = 1014.0
offset_bottom = 31.0
hint_tooltip = "Hide/Show content"
toggle_mode = true
icon = SubResource("9")
flat = true

[node name="ContentKeeper" type="HBoxContainer" parent="VBox"]
offset_top = 35.0
offset_right = 1014.0
offset_bottom = 35.0

[node name="Space" type="Control" parent="VBox/ContentKeeper"]
custom_minimum_size = Vector2(20, 0)
offset_right = 20.0
size_flags_vertical = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/ContentKeeper"]
offset_left = 24.0
offset_right = 1014.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Labels" type="HBoxContainer" parent="VBox/ContentKeeper/VBoxContainer"]
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBox/ContentKeeper/VBoxContainer/Labels"]
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Name"

[node name="Label2" type="Label" parent="VBox/ContentKeeper/VBoxContainer/Labels"]
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Default value"

[node name="Space2" type="Control" parent="VBox/ContentKeeper/VBoxContainer/Labels"]

[node name="Content" type="VBoxContainer" parent="VBox/ContentKeeper/VBoxContainer"]
unique_name_in_owner = true
offset_right = 990.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[connection signal="gui_input" from="." to="." method="_on_VariableGroup_gui_input"]
[connection signal="mouse_exited" from="." to="." method="_on_VariableGroup_mouse_exited"]
[connection signal="focus_exited" from="VBox/MainBar/NameEdit" to="." method="_on_NameEdit_focus_exited"]
[connection signal="gui_input" from="VBox/MainBar/NameEdit" to="." method="_on_NameEdit_gui_input"]
[connection signal="text_submitted" from="VBox/MainBar/NameEdit" to="." method="_on_name_edit_text_submitted"]
[connection signal="text_changed" from="VBox/MainBar/SearchBar" to="." method="_on_SearchBar_text_changed"]
[connection signal="pressed" from="VBox/MainBar/NewVariable" to="." method="_on_NewVariable_pressed"]
[connection signal="pressed" from="VBox/MainBar/NewGroup" to="." method="_on_NewGroup_pressed"]
[connection signal="pressed" from="VBox/MainBar/DuplicateButton" to="." method="_on_DuplicateButton_pressed"]
[connection signal="pressed" from="VBox/MainBar/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="toggled" from="VBox/MainBar/FoldButton" to="." method="_on_FoldButton_toggled"]
